@@ -325,3 +325,5 @@
                            Check that feedback buffer is not null before
                              operating on it in chain_select().
                              Closes #631353, thanks Sami Farin.
+                           Make sure DH/DSA param file is actually opened before
+                             writing to it.  Fixes a segfault in case it is not.
